Fix header z-index

--- a/app/styles/columns.less
+++ b/app/styles/columns.less
@@ -67,7 +67,6 @@
   justify-content: space-between;
   position: sticky;
   top: 0;
-  z-index: 5;
 
   & > .cell-header {
     margin-right: 30px;
